<resources>
    <string name="app_name">AutoGo</string>
    <string name="app_def_txt">--</string>
    <string name="app_law"> 服务条款及免费声明  </string>
    <string name="user_id_accept_payment">个人支付宝</string>
    <string name="user_id_accept_payment_info">若支付宝已实名,只需一键授权</string>
    <string name="user_id_accept_idcard">身份证认证</string>
    <string name="user_id_accept_idcard_info">本过程需要你本人完成,准备好身份证</string>
    <string name="make_sure">确定</string>
    <string name="cancel">取消</string>
    <!-- 更多页面  -->
    <string name="more_nickname">车主昵称</string>
    <string name="more_edit_profile">编辑资料</string>
    <string name="more_accounts_and_security">账号与安全</string>
    <string name="more_setting">设置</string>
    <string name="more_log_out">退出登录</string>
    <string name="more_my_car">我的爱车</string>
    <string name="more_remote_update">远程升级</string>
    <string name="more_service_renewal">服务续费</string>
    <string name="more_contact">联系客服</string>


    <!-- 账号与安全  -->
    <string name="safety_identity_authentication">身份认证</string>
    <string name="safety_face_recognition">人脸识别</string>
    <string name="safety_binding_phone">绑定手机</string>
    <string name="safety_login_pwd_management">登录密码管理</string>
    <string name="safety_remote_pwd_management">远程控制密码管理</string>
    <string name="safety_login_device_management">登录设备管理</string>
    <string name="safety_frozen_account">冻结账户</string>
    <string name="safety_cancellation_account">账户销户</string>
    <!-- 登录密码管理 -->
    <string name="management_change_login_pwd">修改登录密码</string>
    <string name="management_forget_login_pwd">忘记登录密码</string>
    <string name="management_remember_old_pwd">记得原登录密码</string>
    <string name="management_forget_old_pwd">忘记原登录密码</string>
    <string name="management_edit_old_pwd">请输入原登录密码</string>
    <string name="management_edit_new_pwd">请输入新登录密码</string>
    <string name="management_edit_new_pwd_again">请再次输入密码</string>
    <string name="management_edit_phone_num">请输入手机号</string>
    <string name="management_edit_verification_code">请输入验证码</string>
    <string name="management_send_verification_code">发送验证码</string>
    <string name="management_confirm_the_change">确认修改</string>
    <!-- 远程密码管理 -->
    <string name="management_remote_pwd">远程密码管理</string>
    <string name="management_set_remote_pwd">设置远程密码</string>
    <string name="management_change_pwd">修改密码</string>
    <string name="management_reset_remote_pwd">修改远程密码</string>
    <string name="management_forget_remote_pwd">忘记远程密码</string>
    <string name="management_set_remote_control_pwd">设置远程控制密码</string>
    <string name="management_remember_remote_old_pwd">记得原远程控制密码</string>
    <string name="management_forget_remote_old_pwd">忘记原远程控制密码</string>
    <string name="management_without_encryption">远程控制免密</string>
    <string name="management_without_encryption_date">远程密码控制免密时间</string>
    <string name="management_edit_remote_old_pwd">输入原远程操作密码</string>
    <string name="management_edit_remote_new_pwd">输入新密码</string>
    <string name="management_edit_remote_new_pwd_again">再次输入密码</string>
    <string name="face_login_activity_title1">人脸登录</string>
    <string name="face_login_activity_title2">人脸识别</string>
    <string name="management_remote_without_code">远程免密时间范围5~60min</string>
    <string name="management_edit_without_code">请输入远程免密时间</string>
    <!-- 登录设备管理 -->
    <string name="management_login_device">登录设备管理</string>
    <!-- 冻结账户 -->
    <string name="freeze_tv_status_free">瞬间保护账号安全 </string>
    <string name="freeze_tv_status_unfree">账号已经冻结 </string>
    <string name="freeze_tv_free_info">账号冻结解除前任何人都无法使用应用 </string>
    <string name="freeze_tv_unfree_info">账号冻结解除前任何人都无法使用应用 </string>
    <string name="freeze_btn_free">立即冻结</string>
    <string name="freeze_btn_unfree">解冻账号</string>
    <string name="freeze_tv_status_cancle"> 解除账号冻结</string>
    <string name="freeze_tv_status_cancle_info">请确认账号安全再解除冻结</string>
    <string name="unfreeze_tv_status_complete_info">账号可以正常使用了</string>

    <!-- 车辆认证 -->
    <string name="vehicle_certification_add">添加爱车</string>
    <string name="vehicle_certification_info">车辆信息</string>
    <string name="vehicle_certification_vin">请输入车辆车架号(VIN码)</string>
    <string name="vehicle_certification_engine_num">请输入车辆发动机号</string>
    <string name="vehicle_certification_vouchers">购车凭证</string>
    <string name="vehicle_certification_hint">行驶证或购车发票</string>
    <string name="vehicle_certification_next">下一步</string>
    <!--重复登录 -->
    <string name="token_err">您的账户已在其他设备登录，如非本人操作，请通过忘记密码功能，进行密码修改</string>
    <!-- 密码输入限制-->
    <string name="digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-+=;,./~!@#$%^*"\>"'</string>
    <string name="digits1">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>
