<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/ll_vehicle_certification"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sp_12"
        android:layout_marginStart="@dimen/sp_12"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/vehicle_certification_info"
        android:textColor="@color/textColorGray2"
        android:textSize="@dimen/sp_13"/>

    <LinearLayout
        android:id="@+id/ll_vehicle_certification_add"
        style="@style/BgCommonForget"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/txt_vehicle_certification_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/vehicle_certification_add"
            android:textColor="@color/textColorGray1"
            android:textColorHint="@color/textColorGray"
            android:textSize="14sp"
            />

        <ImageView
            android:id="@+id/img_vehicle_certification_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dip"
            android:layout_marginRight="10dip"
            android:padding="5dp"
            android:src="@mipmap/ic_right_arrow"
            android:tag="off"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_vehicle_certification_vin"
        style="@style/baseEditStyle"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/vehicle_certification_vin"
        android:maxLength="17"
        tools:ignore="TextFields"/>

    <EditText
        android:id="@+id/edit_vehicle_certification_engine_num"
        android:visibility="gone"
        style="@style/baseEditStyle"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/vehicle_certification_engine_num"
        tools:ignore="TextFields"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sp_12"
        android:layout_marginStart="@dimen/sp_12"
        android:layout_marginTop="@dimen/dp_10"
        android:visibility="gone"
        android:text="@string/vehicle_certification_vouchers"
        android:textColor="@color/textColorGray2"
        android:textSize="@dimen/sp_13"
        />

    <ImageView
        android:id="@+id/iv_vehicle_certification"
        android:visibility="gone"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/base_edit_gray_bg"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_camera"/>

    <TextView
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/vehicle_certification_hint"
        android:textColor="@color/textColorGray"
        android:textSize="@dimen/sp_13"
        />

    <Button
        android:id="@+id/btn_vehicle_certification"
        style="@style/BtnCommonCommit"
        android:layout_marginTop="40dp"
        android:text="@string/vehicle_certification_next"
        />
</LinearLayout>
