<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:id="@+id/edit_management_remote_phone"
        style="@style/baseEditStyle"
        android:layout_marginTop="10dp"
        android:hint="@string/management_edit_phone_num"
        android:inputType="number"
        android:maxLength="11"
        tools:ignore="TextFields"/>

    <RelativeLayout
        android:id="@+id/rl_management_remote_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edit_management_remote_code"
            style="@style/baseEditStyle"
            android:hint="@string/management_edit_verification_code"
            android:inputType="number"
            android:maxLength="6"
            tools:ignore="TextFields"/>

        <Button
            android:id="@+id/btn_management_remote_code"
            style="@style/BtnSendCodeBg"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/management_send_verification_code"
            tools:ignore="RtlHardcoded"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_management_edit_remote_old_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/management_edit_remote_old_pwd"
        android:textColor="@color/textColorGray"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded"/>

    <com.carlt.autogo.widget.PwdEditText
        android:id="@+id/et_management_remote_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/remote_edit_bg"
        android:cursorVisible="false"
        android:inputType="number"
        android:maxLength="6"
        android:textCursorDrawable="@null"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/management_edit_remote_new_pwd"
        android:textColor="@color/textColorGray"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded"/>

    <com.carlt.autogo.widget.PwdEditText
        android:id="@+id/et_management_remote_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/remote_edit_bg"
        android:cursorVisible="false"
        android:inputType="number"
        android:maxLength="6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/management_edit_remote_new_pwd_again"
        android:textColor="@color/textColorGray"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded"/>

    <com.carlt.autogo.widget.PwdEditText
        android:id="@+id/et_management_remote_new_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/remote_edit_bg"
        android:cursorVisible="false"
        android:inputType="number"
        android:maxLength="6"/>

    <Button
        android:id="@+id/btn_management_remote_confirm"
        style="@style/BtnCommonCommit"
        android:layout_marginTop="40dp"
        android:text="@string/management_confirm_the_change"
        />

</LinearLayout>
