<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/ll_management_set_remote_pwd"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@color/colorWhite"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/colorEdtext"
            android:text="@string/management_set_remote_pwd"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@mipmap/ic_right_arrow"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/management_change_pwd"
        android:textColor="@color/textColorGray"
        android:textSize="14sp"
        android:layout_marginLeft="12dp"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:id="@+id/ll_management_remember_remote_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:background="@color/colorWhite"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/colorEdtext"
            android:text="@string/management_remember_remote_old_pwd"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@mipmap/ic_right_arrow"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/color_c"
        />
    <LinearLayout
        android:id="@+id/ll_management_forget_remote_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:background="@color/colorWhite"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/colorEdtext"
            android:text="@string/management_forget_remote_old_pwd"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@mipmap/ic_right_arrow"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@color/colorWhite"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/colorEdtext"
            android:text="@string/management_without_encryption"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@mipmap/ic_right_arrow"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/color_c"
        />
    <LinearLayout
        android:id="@+id/ll_management_without_encryption_date"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:background="@color/colorWhite"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/colorEdtext"
            android:text="@string/management_without_encryption_date"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@mipmap/ic_right_arrow"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</LinearLayout>
